--- a/package.json
+++ b/package.json
@@ -19,10 +19,22 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ionic-native/camera": "^5.22.0-beta-1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.22.0-beta-1",
+    "@ionic-native/file-chooser": "^5.22.0",
+    "@ionic-native/file-transfer": "^5.22.0",
+    "@ionic-native/ionic-webview": "^5.22.0-beta-1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.2.0",
+    "cordova-plugin-camera": "4.1.0",
+    "cordova-plugin-file": "6.0.2",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-filechooser": "^1.2.0",
+    "cordova-plugin-webview": "0.0.1",
+    "cordova-sqlite-storage": "5.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -51,5 +63,15 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "WebViewer": {},
+      "cordova-sqlite-storage": {}
+    }
+  }
 }
