--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.2.0",
     "angular-password-strength-meter": "^1.0.2",
-    "angular-zxcvbn": "^3.2.2",
-    "angular-zxcvbn-module": "^1.0.0",
+    "cordova-android": "8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-camera": "4.1.0",
     "cordova-plugin-file": "6.0.2",
@@ -45,8 +44,7 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "zxcvbn": "^4.4.2"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.20",
